# scope-graph-first

./: .gitignore  Cargo.toml  README.md  output.mmd
src/: main.rs
src/stlc/: data.rs  label.rs  mod.rs  types.rs
